--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,17 @@
+html, body{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+body{
+    background-image: url(../img/fondo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: rgba(255, 255, 255, 0.6);
+    background-blend-mode: lighten;
+}
 .qr-code img{
     margin: 0 auto!important;
 }
